@@ -30,6 +30,7 @@ MComix 0.92 (4.0.5)
       "Show page numbers": Enabled by default.
       "Avoid unintentional page flips": Enabled by default.
       "Stretch small images": Now in Menu->View->Stretch small images.
+      "Default zoom mode": Last setting is remembered instead.
 
     - Updated Japanese translation. (by Keita Haga)
 
